# pinocchio_matlab_wrapper

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  test.m
include/: pinocchio_wrapper.hpp  wrapper.hpp
scripts/: Data.mat  param_estimation.m  test.m
src/: main.cpp  pinocchio_wrapper.cpp  wrapper.cpp
urdf/: rrbot.urdf
